# thumbnailapp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.base  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  Dockerfile.worker  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  tag-release
app/: constants.py  logging.conf  main.py  models.py  utils.py  worker.py
k8s/: simplefs.yaml  test_client.py
scripts/: run.sh  test.sh
tests/: conftest.py
tests/test_api/: test_api_endpoints.py
